sandbox/output
NumberParser.java:8: error: cannot find symbol
            ArrayList list = new ArrayList();
            ^
  symbol:   class ArrayList
  location: class NumberParser
NumberParser.java:8: error: cannot find symbol
            ArrayList list = new ArrayList();
                                 ^
  symbol:   class ArrayList
  location: class NumberParser
2 errors
